2005-08-14  0.9.22  Roland Clobus <rclobus@bigfoot.com.
	* editor/gtk/editor.c: Use GPOINTER_TO_INT instead of (gint) cast
	
2005-08-05  0.9.21  Stefan Walter <sw@gegenunendlich.de>
	* meta-server/main.c: Added missing #includes for FreeBSD
	
2005-08-01  0.9.20  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/player.c (player_build_summary): Add missing line in
	summary for Gtk+-2.6
	* common/gtk/aboutbox.c (aboutbox_display): Add close button to about
	dialog
	
2005-07-14  0.9.19  Roland Clobus <rclobus@bigfoot.com>
	* README.cygwin: Added instructions for building from CVS.
	* autogen.sh: Added automake-1.9
	* configure.ac, client/gtk/Makefile.am, client/gtk/frontend.c,
	client/gtk/frontend.h, client/gtk/gui.c, client/gtk/offline.c,
	common/gtk/Makefile.am, editor/gtk/Makefile.am,
	server/gtk/Makefile.am: use libgnome+gtk instead of libgnomeui
	* Makefile.am: Renamed indent make target to reindent
	
2005-07-09  0.9.18  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c: Single click build: when a ship and road can be
	built, a ship is chosen when the cursor is at sea, a road is chosen
	when the cursor is over land.
	
2005-07-07  Roland Clobus <rclobus@bigfoot.com>
	* client/common/gnocatan.c renamed to main.c
	* meta-server/gnocatan-meta-server.c renamed to main.c
	* server/server.c renamed to main.c
	* server/gnocatan-server.c renamed to admin.c, contains only admin
	code
	* server/gnocatan-server.h renamed to admin.h, contains only admin
	code
	* server/gtk/gnocatan-server-gtk.c renamed to main.c
	* server/server.c, server/server.h: moved server code from admin.c and
	admin.h to these files
	* client/common/Makefile.am, meta-server/Makefile.am, po/POTFILES.in,
	server/Makefile.am, server/gtk/Makefile.am: use the renamed files
	* pioneers.spec.in: Updated home page
	
2005-07-03  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, editor/gtk/editor.c: Use the Q_() macro for the
	short translatable strings
	